--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <script async src="https://sandbox.arena.im/public/js/arenalib.js?p=creative&e=yisx"></script>  
+    <script async src="https://sandbox.arena.im/public/js/arenachatlib.js?p=creative&e=vwne"></script>
     
     <div id="root"></div>
     <!--
