--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <script async src="https://sandbox.arena.im/public/js/arenachatlib.js?p=qa-publisher&e=mpgs"></script>
+    <script async src="https://sandbox.arena.im/public/js/arenachatlib.js?p=globoesporte&e=5sb4"></script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
